...
  @override
  Widget build(BuildContext context) {

    List<Product> cartList = DataWidget.of(context).cartList;

  return GestureDetector(
    onTap: () => Navigator.of(context).push(MaterialPageRoute(builder: (_) => const Cart(
      key: Key('Cart')
    ))),
    child: Container(
      height: 80,
      decoration: const BoxDecoration(
        gradient: LinearGradient(
...
